--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -51,3 +51,15 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-backend:latest ./chatbot-app/backend 
           docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-frontend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-backend:latest
+
+      - name: Deploy on Server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd ~/chatbot-app
+            git pull origin main
+            docker-compose pull
+            docker-compose up -d --remove-orphans
