--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,7 +59,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd ~/chatbot-app
+            cd ~/GoaAI-ChatBotAssistant
             git pull origin main
             docker-compose pull
             docker-compose up -d --remove-orphans
