ci-cd pipline changes - docker compose line

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -61,5 +61,5 @@ jobs:
           script: |
             cd ~/GoaAI-ChatBotAssistant
             git pull origin main
-            docker-compose pull
-            docker-compose up -d --remove-orphans
+            docker compose pull
+            docker compose up -d --remove-orphans
