changes in docker compse- backend file .env added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - PYTHONUNBUFFERED=1
     networks:
       - chatbot-net
+    .env_file:
+      - ./backend/.env
 
   frontend:
     build: ./frontend/frontend-chatbot
