--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -61,5 +61,7 @@ jobs:
           script: |
             cd ~/GoaAI-ChatBotAssistant
             git pull origin main
+            export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+            export LLAMA_API_URL=${{ secrets.LLAMA_API_URL }}
             docker compose pull
             docker compose up -d --remove-orphans
