--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+    GROQ_API_KEY: ${GROQ_API_KEY}
+    LLAMA_API_URL: ${LLAMA_API_URL}
     networks:
       - chatbot-net
-    env_file:
-      - ./chatbot-app/backend/.env
 
   frontend:
     build: ./frontend/frontend-chatbot
