--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     environment:
       GROQ_API_KEY: ${GROQ_API_KEY}
       LLAMA_API_URL: ${LLAMA_API_URL}
-      - PYTHONUNBUFFERED=1
-        
+      PYTHONUNBUFFERED: 1
+
     networks:
       - chatbot-net
 
