--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,7 +29,7 @@ jobs:
           cd chatbot-app/backend
           python -m pip install --upgrade pip
           pip install -r requirement.txt
-          pytest /tests
+          pytest backend/tests
 
         #Frontend (React + Vite)
       - name: Set up Node.js
