--- a/frontend/frontend-chatbot/package.json
+++ b/frontend/frontend-chatbot/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest --run"
+    "test": "vitest",
+    "test:ci": "vitest --run"
   },
   "dependencies": {
     "20": "^3.1.9",
