--- a/chatbot-app/backend/Dockerfile
+++ b/chatbot-app/backend/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-COPY requirement.txt .
+COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirement.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
