--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     container_name: nginx-proxy
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    port:
+    ports:
       - "80:80"
     depends_on:
       - frontend
