Add Nginx reverse proxy for frontend and backend, changes in docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,6 @@ services:
       dockerfile: Dockerfile
     container_name: chatbot-backend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    ports:
-      - "8000:8000"
     environment:
       GROQ_API_KEY: ${GROQ_API_KEY}
       LLAMA_API_URL: ${LLAMA_API_URL}
@@ -18,8 +16,8 @@ services:
   frontend:
     build: ./frontend/frontend-chatbot
     container_name: chatbot-frontend
-    ports:
-      - "80:80"
+    expose:
+      - "80"
     depends_on:
       - backend
     networks:
