--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name goaaichatbot.work.gd www.goaaichatbot.work.gd;
+    server_name _;
 
     location / {
         proxy_pass http://frontend:80;
