--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,47 @@
 server {
     listen 80;
-    server_name _;
+    server_name _;   # Catch all requests (IP, localhost, etc.)
 
+    # --- Frontend ---
     location / {
         proxy_pass http://frontend:80;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
 
+        # Handle React/Vite SPA client-side routing
         try_files $uri /index.html;
     }
 
+    # --- Backend API ---
     location /api/ {
         proxy_pass http://backend:8000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # --- Grafana ---
+    location /grafana/ {
+        proxy_pass http://grafana:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # --- Prometheus ---
+    location /prometheus/ {
+        proxy_pass http://prometheus:9090/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
