--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,23 @@
 server {
     listen 80;
-    server_name _;   # Catch all requests (IP, localhost, etc.)
+    server_name _;   # Catch-all (IP or hostname)
 
     # --- Frontend ---
     location / {
-        proxy_pass http://frontend:80;
+        proxy_pass http://chatbot-frontend:80;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
 
-        # Handle React/Vite SPA client-side routing
+        # SPA (React/Vite) routing fix
         try_files $uri /index.html;
     }
 
     # --- Backend API ---
     location /api/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://chatbot-backend:8000/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -25,7 +25,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    # --- Grafana ---
+    # --- Grafana Dashboard ---
     location /grafana/ {
         proxy_pass http://grafana:3000/;
         proxy_http_version 1.1;
