--- a/frontend/frontend-chatbot/nginx.conf
+++ b/frontend/frontend-chatbot/nginx.conf
@@ -1,16 +1,16 @@
-server{
-    listen 80;
+# server{
+#     listen 80;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri /index.html
-    }
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html index.htm;
+#         try_files $uri /index.html
+#     }
 
-    #Proxy API requests to backend
-    location /api/{
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_
-    }
-}
+#     #Proxy API requests to backend
+#     location /api/{
+#         proxy_pass http://backend:8000;
+#         proxy_set_header Host $host;
+#         proxy_set_
+#     }
+# }
