changes in ci-cd file

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -66,7 +66,12 @@ jobs:
           script: |
             cd ~/GoaAI-ChatBotAssistant
             git pull origin main
-            export GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
-            export LLAMA_API_URL=${{ secrets.LLAMA_API_URL }}
+
+            # Write environment variables into .env file
+            echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" > .env
+            echo "LLAMA_API_URL=${{ secrets.LLAMA_API_URL }}" >> .env
+
+            # Rebuild and restart all services
             docker compose down
-            docker compose up -d --build
+            docker compose --env-file .env build --no-cache
+            docker compose --env-file .env up -d
