--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,56 +7,55 @@ on:
       - dev
   pull_request:
 
-# its a object and its attributes
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
 
-    # item list [ - ] to add more items or objects
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      #Backend(Python)
+      # Backend (Python)
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
 
-      #pipe | symbol- multi line string
-      - name: Install Backend dependencies and run backend test
+      - name: Install backend dependencies and run tests
         run: |
           cd chatbot-app/backend
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           PYTHONPATH=. pytest tests
 
-        #Frontend (React + Vite)
+      # Frontend (React + Vite)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "22.14.0"
 
-      - name: Install frontend dependencies and run frontend tests
+      - name: Install frontend dependencies and run tests
         run: |
           cd frontend/frontend-chatbot
           npm install
           npm run build
           npm run test:ci
 
-      # Docker build & Push, { { this is placeholder syntax}}
-      - name: Log in to Dockerhub
+      # Docker build & push
+      - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and Docker Images
+
+      - name: Build and push Docker images
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-frontend:latest ./frontend/frontend-chatbot 
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/chatbot-backend:latest ./chatbot-app/backend 
+          docker build --no-cache --pull -t ${{ secrets.DOCKER_USERNAME }}/chatbot-frontend:latest ./frontend/frontend-chatbot
+          docker build --no-cache --pull -t ${{ secrets.DOCKER_USERNAME }}/chatbot-backend:latest ./chatbot-app/backend
           docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-frontend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/chatbot-backend:latest
 
+      # Deploy on EC2 server
       - name: Deploy on Server
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -64,14 +63,17 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            set -e
             cd ~/GoaAI-ChatBotAssistant
             git pull origin main
 
-            # Write environment variables into .env file
-            echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" > .env
-            echo "LLAMA_API_URL=${{ secrets.LLAMA_API_URL }}" >> .env
+            # Save secrets into backend .env file
+            cat <<EOF > chatbot-app/backend/.env
+            GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}
+            LLAMA_API_URL=${{ secrets.LLAMA_API_URL }}
+            EOF
 
-            # Rebuild and restart all services
+            # Rebuild & restart services
             docker compose down
-            docker compose --env-file .env build --no-cache
-            docker compose --env-file .env up -d
+            docker compose build --no-cache
+            docker compose up -d --remove-orphans
