--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,31 +4,29 @@ services:
       context: ./chatbot-app/backend
       dockerfile: Dockerfile
     container_name: chatbot-backend
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-    env_file:
-      - ./chatbot-app/backend/.env
-    ports:
-      - "8000:8000" # Optional: for direct debugging
-    networks:
-      - chatbot-net
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    environment:
+      GROQ_API_KEY: ${GROQ_API_KEY}
+      LLAMA_API_URL: ${LLAMA_API_URL}
+      PYTHONUNBUFFERED: 1
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/ping"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
+    networks:
+      - chatbot-net
 
   frontend:
     build: ./frontend/frontend-chatbot
     container_name: chatbot-frontend
     expose:
       - "80"
+    depends_on:
+      backend:
+        condition: service_healthy
     networks:
       - chatbot-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
 
   prometheus:
     image: prom/prometheus
