--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,47 +1,13 @@
 server {
     listen 80;
-    server_name _;   # Catch-all (IP or hostname)
 
-    # --- Frontend ---
+    server_name _;
+
     location / {
         proxy_pass http://chatbot-frontend:80;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-
-        # SPA (React/Vite) routing fix
-        try_files $uri /index.html;
     }
 
-    # --- Backend API ---
     location /api/ {
-        proxy_pass http://chatbot-backend:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # --- Grafana Dashboard ---
-    location /grafana/ {
-        proxy_pass http://grafana:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    # --- Prometheus ---
-    location /prometheus/ {
-        proxy_pass http://prometheus:9090/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://chatbot-backend:8000;
     }
 }
