--- a/frontend/frontend-chatbot/Dockerfile
+++ b/frontend/frontend-chatbot/Dockerfile
@@ -1,26 +1,11 @@
-# Stage 1: Build React app
-FROM node:20 AS build
-
+# Stage 1: Build
+FROM node:22-alpine as build
 WORKDIR /app
-
-# Install deps
 COPY package*.json ./
 RUN npm install
-
-# Copy source
-COPY . ./
-
-# Build React app (creates dist/)
+COPY . .
 RUN npm run build
 
-# Stage 2: Serve with Nginx
+# Stage 2: Serve
 FROM nginx:alpine
-
-RUN rm -rf /usr/share/nginx/html/*
-
-# Copy built dist into nginx
 COPY --from=build /app/dist /usr/share/nginx/html
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
