--- a/chatbot-app/backend/Dockerfile
+++ b/chatbot-app/backend/Dockerfile
@@ -18,4 +18,4 @@ COPY . .
 EXPOSE 8000
 
 # Start FastAPI with Uvicorn
-CMD ["uvicorn", "app.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
