--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,11 @@ services:
       PYTHONUNBUFFERED: 1
     networks:
       - chatbot-net
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:8000/ping"]
-    #   interval: 30s
-    #   timeout: 10s
-    #   retries: 3
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     build: ./frontend/frontend-chatbot
