--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,10 @@ services:
       PYTHONUNBUFFERED: 1
     networks:
       - chatbot-net
+    ports:
+      - "8000:8000" # Expose to host for testing
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/metrics || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
